fix(devloop): compile with -parameters and -g like a Maven build
The dev-loop daemon compiled with a fixed javac option list that carried
neither flag. javac defaults both off, while a normal build has both on:
spring-boot-starter-parent configures the compiler plugin with
<parameters>true</parameters>, and the plugin defaults <debug> to true.
Every class the daemon rewrote into target/classes therefore lost its
MethodParameters and LocalVariableTable attributes, and a recompiled
Spring Data repository with a named parameter then threw "for queries
with named parameters you need to provide names for method parameters"
at runtime while the apply reported success.

The flags are passed unconditionally rather than read off the poms: the
compiler plugin's configuration is inherited from a parent outside the
checkout in every Spring Boot project, which the daemon's pom reader
cannot see, and that is exactly the case that has to work.

Fixes #25560